--- a/src/styles/sections/_trajetoria.scss
+++ b/src/styles/sections/_trajetoria.scss
@@ -66,7 +66,7 @@
   font-weight: tokens.$font-weight-semibold;
   letter-spacing: tokens.$letter-spacing-wide;
   text-transform: uppercase;
-  color: tokens.$color-gold-700;
+  color: tokens.$color-primary-700;
   margin: 0;
 }
 
